# api-specification/api-specification/openapi.yml
@@ -1,7 +1,7 @@
 openapi: "3.0.2"
 info:
   description: This is the Rest API specification for the Harpocrates application
-  version: "8.2.0-textContentClassifications.4"
+  version: "8.2.0-textContentClassifications.5"
   title: Harpocrates API
   license:
     name: MIT
@@ -386,7 +386,7 @@ components:
       type: object
       description: A document to review
       required:
-        - _id
+        - documentId
         - textContents
       properties:
         name:
@@ -394,7 +394,7 @@ components:
           allOf:
             - "$ref": "#/components/schemas/nameBase"
             - description: Name of the Document
-        _id:
+        documentId:
           allOf:
             - "$ref": "#/components/schemas/idBase"
             - description: Unique identifier for a Document
